<resources>
    <string name="app_name">Join My Party</string>
    
    <!-- Strings related to login -->
    <string name="email_label_text">Email</string>
    <string name="password_label_text">Password</string>
    <string name="re_password_label_text">Confirm Password</string>
    <string name="login_label_text">Login</string>

    <string name="login_button">Login</string>
    <string name="new_register_button">Register</string>
    <string name="register_button">New here? Click to register!</string>

    <string name="formula_empty_error">Cannot be empty</string>
    <string name="formula_password_error">Password must match</string>

    <string name="connection_error">Connection error, please check it and try again!</string>

    <string name="google_maps_api_key">AIzaSyBpe0Q2Y0w2hkvDdj2_i5H3YieE3rW62CI</string>

    <string name="shared_preferences_user">user_shared</string>
</resources>